fix default style definition | fix flexbox gap if native is supported

--- a/src/global.css
+++ b/src/global.css
@@ -13,15 +13,16 @@ body {
   --nu-line-height: 1.5rem;
 }
 
-body:not(.nu-prevent-defaults) {
+html:not(.nu-prevent-defaults), html:not(.nu-prevent-defaults) body {
+  font-size: 1rem;
   line-height: 1rem;
 }
 
-body:not(.nu-prevent-defaults) > *:not([size]) {
+html:not(.nu-prevent-defaults) body > *:not([size]) {
   line-height: 1.5rem;
 }
 
-.nu-defaults, body:not(.nu-prevent-defaults) {
+.nu-defaults, html:not(.nu-prevent-defaults) body {
   margin: 0;
   padding: 0;
   font-family: 'Avenir Next', 'Avenir', Helvetica, Ubuntu, 'DejaVu Sans', Arial, sans-serif;
